accommodations-service.yml
apiVersion: v1
kind: Service
metadata:
  name: accommodations-service
spec:
  selector:
    app: accommodations-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accommodations-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accommodations-service
  template:
    metadata:
      labels:
        app: accommodations-service
    spec:
      containers:
        - name: accommodations-service
          image: accommodations-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
