api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: airbnb-clone-api-gateway
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: api-gateway-nginx-conf
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: api-gateway-nginx-conf
          configMap:
            name: api-gateway-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: api-gateway
