auth-serv.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/logs
              name: auth-logs
            - mountPath: /app/data
              name: blacklist
            - mountPath: /app/security
              name: rbac
      volumes:
        - name: auth-logs
          emptyDir: {}
        - name: blacklist
          emptyDir: {}
        - name: rbac
          emptyDir: {}
