datanode.yml
apiVersion: v1
kind: Service
metadata:
  name: datanode1
spec:
  selector:
    app: datanode1
  ports:
    - protocol: TCP
      port: 9870
      targetPort: 9870
#      TODO potential port break
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datanode1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datanode1
  template:
    metadata:
      labels:
        app: datanode1
    spec:
      containers:
        - name: datanode1
          image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
          volumeMounts:
            - name: hadoop-datanode1
              mountPath: /hadoop/dfs/data
      volumes:
        - name: hadoop-datanode1
          persistentVolumeClaim:
            claimName: hadoop-datanode1-pvc
