esdb.yml
apiVersion: v1
kind: Service
metadata:
  name: esdb
spec:
  selector:
    app: esdb
  ports:
    - name: http
      protocol: TCP
      port: 2113
      targetPort: 2113
    - name: tcp
      protocol: TCP
      port: 1113
      targetPort: 1113
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: esdb
spec:
  serviceName: "esdb"
  replicas: 1
  selector:
    matchLabels:
      app: esdb
  template:
    metadata:
      labels:
        app: esdb
    spec:
      containers:
        - name: esdb
          image: eventstore/eventstore:23.10.0-bookworm-slim
          ports:
            - name: http
              containerPort: 2113
            - name: tcp
              containerPort: 1113
          volumeMounts:
            - name: eventstore-volume-data
              mountPath: /var/lib/eventstore
            - name: eventstore-volume-logs
              mountPath: /var/log/eventstore
      volumes:
        - name: eventstore-volume-data
          persistentVolumeClaim:
            claimName: eventstoredb-pvc
        - name: eventstore-volume-logs
          persistentVolumeClaim:
            claimName: eventstoredb-logs-pvc
