mail-serv.yml
apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
        - name: mail-service
          image: mail-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/templates
              name: templates
            - mountPath: /app/logs
              name: mail-logs
      volumes:
        - name: templates
          emptyDir: {}
        - name: mail-logs
          emptyDir: {}
