metrics-command-service.yml
apiVersion: v1
kind: Service
metadata:
  name: metrics-command
spec:
  selector:
    app: metrics-command
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-command
  template:
    metadata:
      labels:
        app: metrics-command
    spec:
      containers:
        - name: metrics-command
          image: metrics-command
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
