metrics-query-service.yml
apiVersion: v1
kind: Service
metadata:
  name: metrics-query
spec:
  selector:
    app: metrics-query
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-query
  template:
    metadata:
      labels:
        app: metrics-query
    spec:
      containers:
        - name: metrics-query
          image: metrics-query
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
