notifications-db.yml
apiVersion: v1
kind: Service
metadata:
  name: notifications-db
spec:
  selector:
    app: notifications-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notifications-db
spec:
  serviceName: "notifications-db"
  replicas: 1
  selector:
    matchLabels:
      app: notifications-db
  template:
    metadata:
      labels:
        app: notifications-db
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
