redis-db.yml
apiVersion: v1
kind: Service
metadata:
  name: acc-redis
spec:
  selector:
    app: acc-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acc-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acc-redis
  template:
    metadata:
      labels:
        app: acc-redis
    spec:
      containers:
        - name: redis
          image: redis
          args: ["redis-server", "--save", "20", "1", "--loglevel", "warning"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data-pvc
