reservations-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reservations-service
spec:
  selector:
    app: reservations-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservations-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservations-service
  template:
    metadata:
      labels:
        app: reservations-service
    spec:
      containers:
        - name: reservations-service
          image: reservations-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
