api-gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: api-gateway-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
#done
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
#done
          - path: /api/metrics-command(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: metrics-command
                port:
                  number: 8080
#done
          - path: /api/metrics-query(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: metrics-query
                port:
                  number: 8080
#done
          - path: /api/mail(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mail-service
                port:
                  number: 8080
#done
          - path: /api/user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8080
#done
          - path: /api/notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notifications-service
                port:
                  number: 8080
          - path: /api/accommodations(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: accommodations-service
                port:
                  number: 8080
#done
          - path: /api/recommendation(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: recommendation-service
                port:
                  number: 8080
#done
          - path: /api/reservations(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: accommodations-service
                port:
                  number: 8080
